<resources>
    <string name="app_name">NMedia</string>
    <string name="NMedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_views">Views</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="video">description_post_video</string>
    <string name="video_play">description_video_play</string>
    <string name="open_post">open post</string>
</resources>